fix(progressbar): ngAnimate conflicts with bootstrap animation

--- a/.jshintrc
+++ b/.jshintrc
@@ -25,6 +25,9 @@
     "module"     : false,
     "spyOn"      : false,
     "inject"     : false,
-    "it"         : false
+    "it"         : false,
+
+    // For Test Helpers
+    "dealoc"     : false
   }
 }
